kubernetes/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      serviceAccountName: eks-admin
      containers:
        - name: product-service
          image: com.example/product-service:latest
          ports:
            - containerPort: 8081
