kubernetes/review-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-service
  namespace: default
spec:
  selector:
    app: review-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
